# panda-test-001

./: .gitignore  pyproject.toml  requirements.txt  shell.nix
src/pandas_test_001/: pandas_001.py
tests/fixtures/: ApstraProvisiongTemplate.xlsx
